Poner links originales

--- a/book/book.tex
+++ b/book/book.tex
@@ -3526,7 +3526,7 @@ también requiere
 
 \begin{exercise}
 
-Lee sobre espirales en \url{http://es.wikipedia.org/wiki/Espiral}; luego
+Lee sobre espirales en \url{http://en.wikipedia.org/wiki/Spiral}; luego
 escribe un programa que dibuje una espiral arquimediana (o uno de los otros
 tipos).  Solución: \url{http://thinkpython2.com/code/spiral.py}.
 \index{espiral}
@@ -5019,7 +5019,7 @@ que se llama salto de fe!
 Después de {\tt factorial}, el ejemplo más común de una función
 matemática definida de manera recursiva es {\tt fibonacci}, que tiene la
 siguiente definición (ver
-  \url{http://es.wikipedia.org/wiki/Sucesión_de_Fibonacci}):
+  \url{http://en.wikipedia.org/wiki/Fibonacci_number}):
 %
 \begin{eqnarray*}
 && \mathrm{fibonacci}(0) = 0 \\
@@ -5278,7 +5278,7 @@ A(m-1, A(m, n-1)) & \mbox{si } m > 0 \mbox{ y } n > 0.
 \end{cases}
 \end{eqnarray*}
 %
-Ver \url{http://es.wikipedia.org/wiki/Función_de_Ackermann}.
+Ver \url{http://en.wikipedia.org/wiki/Ackermann_function}.
 Escribe una función con nombre {\tt ack} que evalúe la función de Ackermann.
 Usa tu función para evaluar {\tt ack(3, 4)}, que debería ser 125.
 ¿Que ocurre para valores más grandes de {\tt m} y {\tt n}?
@@ -5585,7 +5585,7 @@ comenzando con 16.
 La pregunta difícil es si podemos probar que este programa termina
 para {\em todos} los valores positivos de {\tt n}.  Hasta ahora, ¡nadie ha
 sido capaz de probarlo {\em o} refutarlo!  (Ver
-  \url{http://es.wikipedia.org/wiki/Conjetura_de_Collatz}.)
+  \url{http://en.wikipedia.org/wiki/Collatz_conjecture}.)
 
 Como ejercicio, reescribe la función \verb"print_n" de la
 Sección~\ref{recursion} usando iteración en lugar de recursividad.
@@ -8460,7 +8460,7 @@ original.
 \begin{exercise}
 
 Este ejercicio está relacionado con la denominada ``Paradoja del cumpleaños'', de la cual
-puedes leer en \url{http://es.wikipedia.org/wiki/Paradoja_del_cumplea\~nos}.
+puedes leer en \url{http://en.wikipedia.org/wiki/Birthday_paradox}.
 \index{paradoja del cumpleaños}
 
 Si hay 23 estudiantes en tu clase, ¿cuáles son las posibilidades
